# slam_fpga_competition

./: README.md  requirements.txt
data/kitti/: README.md
doc/: usage.md
output/logs/: README.md
output/results/: README.md  traj_est.txt
scripts/: evaluate.py  run_fpga.sh  run_host.sh
src/: CMakeLists.txt  main.cpp
src/slam_algorithm/: README.MD  icp_localization.hpp
